Drawer: Fixed mini mode drawer's z-index when "closed" (#3206)

--- a/src/MudBlazor/Styles/layout/_drawer.scss
+++ b/src/MudBlazor/Styles/layout/_drawer.scss
@@ -29,7 +29,7 @@
     }
 
     @each $breakpoint in map-keys($breakpoints) {
-        &.mud-drawer-mini.mud-drawer-#{$breakpoint}, &.mud-drawer-responsive.mud-drawer-#{$breakpoint} {
+        &.mud-drawer-mini.mud-drawer-#{$breakpoint}:not(.mud-drawer--closed), &.mud-drawer-responsive.mud-drawer-#{$breakpoint} {
             @media (max-width: map-get($breakpoints, $breakpoint) - 1px) {
                 z-index: calc(var(--mud-zindex-appbar) + 2);
 
